 * Fixed missing newlines in the status page output. [andreasgroth]

v2.5.1
----------------------------------------------------------------------------------------------------
 * When installing a custom CA file via `MDCACertificateFile`, also set the
   libcurl option CURLSSLOPT_NO_REVOKE that suppresses complains by Schannel
   (when curl is linked with it) about missing CRL/OCSP in certificates.
   Fixes #361.
 * Fixed handling of corrupted httpd.json and added test 300_30 for it.
   File is removed on error and written again. Fixes #369.
 * Added explanation in log for how to proceed when md_store.json could not be
   parsed and prevented the server start.

v2.5.0
----------------------------------------------------------------------------------------------------
 * Added support for ACME profiles. See README on how to use them.
 * restored fixed to #336 and #337 which got lost in a sync with Apache svn
 * Add Issue Name/Uris to certificate information in md-status handler
 * MDomains with static certificate files have MDRenewMode "manual", unless
   "always" is configured.

v2.4.31
----------------------------------------------------------------------------------------------------
 * Improved error reporting when waiting for ACME server to verify domains
   or finalizing the order fails, e.g. times out.
 * Increasing the timeouts to wait for ACME server to verify domain names
   and issue the certificate from 30 seconds to 5 minutes.

v2.4.30
----------------------------------------------------------------------------------------------------
 * Change a log level from error to debug when Stapling is enabled but a
   certificate carries no OCSP responder URL.

v2.4.29
----------------------------------------------------------------------------------------------------
 * Fixed HTTP-01 challenges to not carry a final newline, as some ACME
   server fail to ignore it. [Michael Kaufmann (@mkauf)]